--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
-<!doctype html><html lang="en"><head><meta http-equiv="content-type" content="text/html; charset=utf-8"><meta name="viewport" content="initial-scale=1, width=device-width"><title>Hyper-Static Site</title><link rel="stylesheet" href="/style.css"></head><body><div class="page"><div class="content"><div class="home"><h1 id="spacejackgithubio">spacejack.github.io</h1>
-<p>© 2019 Mike Linkovich</p>
+<!doctype html><html lang="en"><head><meta http-equiv="content-type" content="text/html; charset=utf-8"><meta name="viewport" content="initial-scale=1, width=device-width"><title>Hyper-Static Site</title><link rel="stylesheet" href="/style.css"></head><body><div class="page"><div class="content"><div class="home"><h1>spacejack.github.io</h1>
+<p>© 2023 Mike Linkovich</p>
 <p>A collection of open source projects on Github.</p>
 <hr>
-<h2 id="webgl">WebGL</h2>
+<h2>WebGL</h2>
 <ul>
 <li><a href="https://github.com/spacejack/terra">Grass Part 2: terra</a> ☼ A 3D terrain with grass experiment</li>
 <li><a href="https://github.com/spacejack/poaceae">Grass Part 1: poaceae</a> ☼ High-density grass experiment</li>
 <li><a href="https://github.com/spacejack/three-mithril-ts">THREE.js, Mithril.js Starter</a> ☼ Starter project for a 3D game using THREE.js with Mithril.js for the UI.</li>
 </ul>
-<h2 id="web-apps">Web Apps</h2>
+<h2>Web Apps</h2>
 <ul>
 <li><a href="https://github.com/spacejack/freddy">Freddy</a> ☼ A fast Reddit reader web app for mobile devices.</li>
 <li><a href="https://github.com/spacejack/waveshader">Wave Shader</a> ☼ An audio wave generation sketchpad using GLSL.</li>
+<li><a href="https://spacejack.github.io/ear-trainer">Ear Trainer</a> ☼ A customizable, auto-generated ear training exercises for musicians.</li>
 </ul>
-<h2 id="mithril-related">Mithril-Related</h2>
+<h2>Mithril-Related</h2>
 <ul>
 <li><a href="https://github.com/MithrilJS/mithril.js">Mithril.js</a> ☼ My favourite UI library.</li>
 <li><a href="https://github.com/MithrilJS/mithril.d.ts">mithril.d.ts</a> ☼ TypeScript types for Mithril.</li>
@@ -22,12 +23,12 @@
 <li><a href="https://github.com/spacejack/mithril-checkbox">mithril-checkbox</a> ☼ Style-able checkbox/radio input component.</li>
 <li><a href="https://github.com/spacejack/mithril-select">mithril-select</a> ☼ Style-able select input component.</li>
 </ul>
-<h2 id="htmlui">HTML/UI</h2>
+<h2>HTML/UI</h2>
 <ul>
 <li><a href="https://github.com/spacejack/panel-slider">panel-slider</a> ☼ High-performance swipe animation and navigation.</li>
 <li><a href="https://github.com/spacejack/hyper-static">hyper-static</a> ☼ A barebones, free-form static site generator using markdown and hyperscript.</li>
 </ul>
-<h2 id="c">C++</h2>
+<h2>C++</h2>
 <ul>
 <li><a href="https://github.com/spacejack/glfx">OpenGL 2/SDL Demo</a> ☼ Modern(ish) C++ skeleton to render 2D sprite batches.</li>
 </ul>
