Add synth links

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!doctype html><html lang="en"><head><meta http-equiv="content-type" content="text/html; charset=utf-8"><meta name="viewport" content="initial-scale=1, width=device-width"><title>Hyper-Static Site</title><link rel="stylesheet" href="/style.css"></head><body><div class="page"><div class="content"><div class="home"><h1>spacejack.github.io</h1>
-<p>© 2023 Mike Linkovich</p>
+<!doctype html><html lang="en"><head><meta http-equiv="content-type" content="text/html; charset=utf-8"><meta name="viewport" content="initial-scale=1, width=device-width"><title>spacejack.github.io</title><link rel="stylesheet" href="/style.css"></head><body><div class="page"><div class="content"><div class="home"><h1>spacejack.github.io</h1>
+<p>© 2024 Mike Linkovich</p>
 <p>A collection of open source projects on Github.</p>
 <hr>
 <h2>WebGL</h2>
@@ -13,6 +13,8 @@
 <li><a href="https://github.com/spacejack/freddy">Freddy</a> ☼ A fast Reddit reader web app for mobile devices.</li>
 <li><a href="https://github.com/spacejack/waveshader">Wave Shader</a> ☼ An audio wave generation sketchpad using GLSL.</li>
 <li><a href="https://spacejack.github.io/ear-trainer">Ear Trainer</a> ☼ A customizable, auto-generated ear training exercises for musicians.</li>
+<li><a href="https://spacejack.github.io/subsynth">SubSynth</a> ☼ A simple subtractive synth.</li>
+<li><a href="https://spacejack.github.io/fmsynth">FMSynth</a> ☼ A simple FM synth.</li>
 </ul>
 <h2>Mithril-Related</h2>
 <ul>
