Add iOS Piano link

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 <ul>
 <li><a href="https://github.com/spacejack/glfx">OpenGL 2/SDL Demo</a> ☼ Modern(ish) C++ skeleton to render 2D sprite batches.</li>
 </ul>
+<h2>Other</h2>
+<ul>
+<li><a href="https://spacejack.github.io/ios-piano">iOS & Piano</a> ☼ Tips for pianists wanting to augment their digital piano with an iPad/iPhone.</li>
+</ul>
+
 <hr>
 <p><a href="http://github.com/spacejack">All my Github repositories</a></p>
 </div></div></div></body></html>
